--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,10 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
